--- a/client/style.scss
+++ b/client/style.scss
@@ -4,7 +4,7 @@
 }
 
 html, body, #app {
-  height: 100%;
+  min-height: 100vh;
   width: 100%;
   padding: 0;
   margin: 0;
@@ -16,7 +16,7 @@ a {
 
 main {
   width: 100%;
-  height: 100%;
+  min-height: 100vh;
 
   display: flex;
   main > * { flex: auto; }
@@ -34,6 +34,30 @@ main {
   .wrapper {
     min-height: 20px;
     width: 100%;
+  }
+
+  .key {
+    background-color: rgba(239, 186, 149, 0.51);
+    color: rgb(230, 224, 224);
+    padding: 8px;
+    margin: -15px -15px 12px;
+
+    .separator {
+      margin: 0 6px;
+    }
+    .partial-id {
+      font-size: 86%;
+      text-decoration: none;
+      color: inherit;
+      transition: all 500ms;
+
+      &:hover {
+        text-decoration: underline;
+        padding: 2px 4px;
+        color: white;
+        background: teal;
+      }
+    }
   }
 
   .name {
