--- a/client/style.scss
+++ b/client/style.scss
@@ -122,16 +122,25 @@ main {
   }
 
   .content {
+    font-size: 75%;
     text-align: justify;
-    padding: 12px 8px;
+    padding: 6px;
     border-radius: 7px;
     background: #eee;
     color: #333;
-    min-height: 200px;
-    margin: 18px 0;
+    margin: 20px 0;
+    white-space: pre-wrap;
 
     &:empty {
       visibility: hidden;
+    }
+
+    textarea {
+      width: 100%;
+      min-height: 100px;
+      border: 0;
+      outline: none;
+      background: inherit;
     }
   }
 
