--- a/client/style.scss
+++ b/client/style.scss
@@ -158,28 +158,55 @@ main {
   padding: 18px;
   overflow-y: auto;
   display: flex;
-  align-items: flex-start;
-  flex-wrap: wrap;
-}
 
-.entry {
-  padding: 6px;
-  background-color: rgba(255, 255, 255, 0.6);
-  border-radius: 5px;
-  margin: 4px;
-  min-height: 40px;
-  min-width: 40px;
-
-  .name {
-    font-size: 110%;
-    text-align: center;
-    margin-bottom: 6px;
+  .entries-column {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    flex-wrap: wrap;
+    min-width: 124px;
+    margin-right: 6px;
   }
-  .content {
-    font-size: 90%;
-    overflow: hidden;
-    white-space: nowrap;
-    text-overflow: ellipsis;
+
+  .new {
+    opacity: 0.7;
+    text-align: center;
+    font-size: 200%;
+    width: 96%;
+    margin: 2% auto;
+    padding: 2px;
+    border: 3px dashed #888;
+    color: #888;
+  }
+
+  .placeholder {
+    width: 100%;
+    height: 50%;
+  }
+
+  .entry {
+    padding: 6px;
+    background-color: rgba(255, 255, 255, 0.6);
+    border-radius: 5px;
+    margin: 4px auto;
+    min-height: 40px;
+    min-width: 40px;
+    width: 96%;
+    max-width: 170px;
+
+    .name {
+      font-size: 110%;
+      text-align: center;
+      margin-bottom: 6px;
+      text-decoration: none;
+      color: inherit;
+    }
+    .content {
+      font-size: 90%;
+      overflow: hidden;
+      white-space: nowrap;
+      text-overflow: ellipsis;
+    }
   }
 }
 
