--- a/client/style.scss
+++ b/client/style.scss
@@ -173,6 +173,39 @@ main {
       flex-wrap: wrap;
     }
 
+    .start-add-member {
+      flex-grow: 3;
+      margin: 0 21px;
+    }
+
+    .add-member {
+      flex-grow: 20;
+      order: -1;
+      width: 100%;
+      display: flex;
+      margin-bottom: 15px;
+
+      & > * {
+        flex: auto;
+      }
+
+      .Select {
+        flex-grow: 10;
+      }
+
+      .react-tangle-input {
+        text-align: center !important;
+        margin: 3px;
+        background: rgba(239, 186, 149, 0.77);
+        color: white;
+        line-height: 14px;
+        width: 28px;
+        height: 28px;
+        border-radius: 14px;
+        padding: 6px;
+      }
+    }
+
     .user {
       margin: 0 2px;
       position: relative;
@@ -189,9 +222,10 @@ main {
       line-height: 14px;
     }
 
-    &.has-direct .direct {
-      border-bottom: 2px solid inherit;
-      margin-bottom: 19px;
+    .direct {
+      border-bottom: 1px dashed var(--panels-foreground);
+      margin: 19px;
+      padding-bottom: 14px;
     }
 
     .direct {
